# golds

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  results.json  train_sequential.sh
configs/: defaults.yaml
configs/games/: breakout.yaml  enduro.yaml  frostbite.yaml  mega_man_2.yaml  montezuma_revenge.yaml  mortal_kombat_ii.yaml  ms_pacman.yaml  pong.yaml  sonic_the_hedgehog.yaml  space_invaders.yaml  street_fighter_ii.yaml  super_mario_bros.yaml  super_mario_bros_2_japan.yaml  tetris.yaml
docs/: QUICKSTART.md
docs/architecture/: AUDIT.md
docs/inception/: 00-framing.md  01-research-plan.md  02-research-memo.md  03-synthesis.md  spec.md
docs/research/: exploration_methods.md  gymnasium_retro_2025.md  model_zoo_standards.md  ppo_advances_2024_2025.md  reward_shaping_survey.md  self_play_architectures.md
golds-tracking/: README_training_system.txt  env.template
golds-tracking/configs/: queue.yaml
golds-tracking/runs_meta/: 01_sonic_the_hedgehog_ppo.json  01_super_mario_bros_2_ppo.json  02_mortal_kombat_ii_ppo.json  (+2 more)
notebooks/: 01_ppo_theory.ipynb  02_environment_pipeline.ipynb  03_training_analysis.ipynb  04_reward_engineering.ipynb  05_model_zoo_cards.ipynb
research-workspace/: FINDINGS.md  PLAN.md  REPORT.md
roms/: README.md
scripts/: cleanup_checkpoints.sh  record_and_send.py  record_best_mp4.sh  record_model_mp4.sh  run_queue.py  setup_roms.sh  watch.sh
tests/: __init__.py  conftest.py  test_atari_env_id.py  test_baselines.py  test_completion_eval.py  test_config.py  test_config_loader.py  test_diagnose.py  test_elo_tracker.py  test_git_info.py  test_invariant_callback.py  test_maker.py  test_registry.py  test_results_callback.py  test_results_store.py  test_rnd.py  test_schedules.py  test_shortcuts.py  test_wandb_callback.py  test_wrappers.py
(+60 files in other folders)
